added hella documentation + an endpoint I forgot
